--- a/metadata/md5-cache/app-editors/mypad-1.0.5
+++ b/metadata/md5-cache/app-editors/mypad-1.0.5
@@ -3,12 +3,13 @@ DEPEND=>=dev-dotnet/icsharpcode-texteditor-3.2.2_p2018020702-r1 >=dev-dotnet/nde
 DESCRIPTION=mypad text editor
 EAPI=7
 HOMEPAGE=https://github.com/ArsenShnurkov/mypad-winforms-texteditor
+INHERIT=dotnet desktop xdg-utils
 IUSE=+net45 debug developer symlink net45
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64
 LICENSE=MIT
-RDEPEND=>=dev-dotnet/icsharpcode-texteditor-3.2.2_p2018020702-r1 >=dev-dotnet/ndepend-path-0.0_p20151123-r1
+RDEPEND=>=dev-dotnet/icsharpcode-texteditor-3.2.2_p2018020702-r1 >=dev-dotnet/ndepend-path-0.0_p20151123-r1 dev-lang/mono
 RESTRICT=mirror
 SLOT=3
 SRC_URI=https://github.com/ArsenShnurkov/mypad-winforms-texteditor/archive/090ddcfac6cd51007e2d90e19a010074de1f353e.zip -> app-editors-mypad-1.0.5.zip
-_eclasses_=desktop	7fd20552ce4cc97e8acb132a499a7dd8	dotnet	978985b1c88cff3d70355bdc2fba673f	eutils	fcb2aa98e1948b835b5ae66ca52868c5	mono-env	059a05efbba66d5bdcc2dd74d91f82f8	xdg-utils	ff2ff954e6b17929574eee4efc5152ba
-_md5_=e9c962d26d4c84ba2746c4601c8002fd
+_eclasses_=edos2unix	33e347e171066657f91f8b0c72ec8773	strip-linguas	ac3ee41ee2d31d8c41a77c0838320cc7	wrapper	4a1902f969e5718126434fc35f3a0d9c	eutils	dab5d8ec471d025b79c9e6906bcf3bff	mono-env	60554e038c8ac2b080e23e280ad8382b	dotnet-native	1ef59d4bd0c2968f1b935c22608afc75	dotnet	4dd123fdd3d16de32fe13e1a8f8fdf4d	desktop	c0d27bf73aa08ca05b663dbd31fbef28	xdg-utils	fffb53a53cf17c9c0c998a3c0a590c7e
+_md5_=87cc352af9f97bd9fe1b56202a3f20cb
