--- a/metadata/md5-cache/app-eselect/eselect-msbuild-15.9
+++ b/metadata/md5-cache/app-eselect/eselect-msbuild-15.9
@@ -1,11 +1,11 @@
 DEFINED_PHASES=install
 DESCRIPTION=msbuild eselect module
-EAPI=6
+EAPI=7
 HOMEPAGE=https://github.com/ArsenShnurkov/shnurise
-KEYWORDS=~amd64 ~ppc ~x86
+KEYWORDS=amd64 arm64
 LICENSE=GPL-2
 RDEPEND=app-admin/eselect
 RESTRICT=mirror
 SLOT=0
 SRC_URI=https://codeload.github.com/ArsenShnurkov/eselect-msbuild/tar.gz/bff06be7887ab2fb8a496bad9282b54ee9e3821c -> eselect-msbuild-15.9.tar.gz
-_md5_=5da1638f1991b5f97fac551feb18ca4d
+_md5_=da7870d6c9e36197f5118332607a837b
