--- a/metadata/md5-cache/app-office/projectlibre-bin-1.6.2
+++ b/metadata/md5-cache/app-office/projectlibre-bin-1.6.2
@@ -2,10 +2,11 @@ DEFINED_PHASES=install prepare unpack
 DESCRIPTION=A free and open source desktop alternative to Microsoft Project
 EAPI=5
 HOMEPAGE=http://www.projectlibre.org/
+INHERIT=eutils
 KEYWORDS=amd64 x86
 LICENSE=CPAL-1.0
 RDEPEND=virtual/jre
 SLOT=0
 SRC_URI=mirror://sourceforge/projectlibre/ProjectLibre/1.6.2/projectlibre-1.6.2.tar.gz http://sourceforge.net/p/projectlibre/code/ci/master/tree/openproj_build/resources/projectlibre.desktop?format=raw -> projectlibre.desktop http://sourceforge.net/p/projectlibre/code/ci/master/tree/openproj_build/resources/projectlibre.png?format=raw -> projectlibre.png
-_eclasses_=desktop	7fd20552ce4cc97e8acb132a499a7dd8	epatch	ed88001f77c6dd0d5f09e45c1a5b480e	estack	686eaab303305a908fd57b2fd7617800	eutils	fcb2aa98e1948b835b5ae66ca52868c5	ltprune	2729691420b6deeda2a90b1f1183fb55	multilib	318e8ae683e57fd3ccd0d31a769d8ee8	preserve-libs	ef207dc62baddfddfd39a164d9797648	toolchain-funcs	512eb3367f507ebaa1d1d43ab7d66e6c	vcs-clean	2a0f74a496fa2b1552c4f3398258b7bf
-_md5_=8dd185bb8ead29e84335f68bcf506ce1
+_eclasses_=desktop	c0d27bf73aa08ca05b663dbd31fbef28	edos2unix	33e347e171066657f91f8b0c72ec8773	estack	055c42df72f76a4f45ec92b35e83cd56	epatch	9f813bb3c47cf2e60619a663b87c5f4e	toolchain-funcs	badd6e329e1f3e6bee99b35bf8763ce8	multilib	4a33c9008e5ee30cb8840a3fdc24df2b	ltprune	4f3f2db5ce3ccbeeacdf3f94954043aa	preserve-libs	a8e50acee31b5759b4df1f7707cae54b	strip-linguas	ac3ee41ee2d31d8c41a77c0838320cc7	vcs-clean	d271b7bc7e6a009758d7d4ef749174e3	wrapper	4a1902f969e5718126434fc35f3a0d9c	eutils	dab5d8ec471d025b79c9e6906bcf3bff
+_md5_=2a2d4bfdeec311dd3b07af218f9d269c
