--- a/metadata/md5-cache/dev-dotnet/dotnetzip-semverd-1.13.7
+++ b/metadata/md5-cache/dev-dotnet/dotnetzip-semverd-1.13.7
@@ -3,12 +3,13 @@ DEPEND=virtual/pkgconfig
 DESCRIPTION=create, extract, or update zip files with C# (=DotNetZip+SemVer)
 EAPI=7
 HOMEPAGE=https://github.com/haf/DotNetZip.Semverd
+INHERIT=dotnet mono-pkg-config
 IUSE=+net45 +pkg-config debug source net45 pkg-config
-KEYWORDS=~amd64 ~ppc ~x86
-LICENSE=MS-PL
+KEYWORDS=amd64 arm64
+LICENSE=Ms-PL
 RDEPEND=
 RESTRICT=mirror
 SLOT=13
 SRC_URI=https://github.com/haf/DotNetZip.Semverd/archive/080d4131ccb8f202aea543b46e861488e906ac8a.tar.gz -> dotnetzip-semverd-1.13.7.tar.gz
-_eclasses_=dotnet	978985b1c88cff3d70355bdc2fba673f	eutils	fcb2aa98e1948b835b5ae66ca52868c5	mono-env	059a05efbba66d5bdcc2dd74d91f82f8	mono-pkg-config	14ddc107778456bb5e1e576c0f1be5cb
-_md5_=e25d9c171fb7278ab546d73a97a6ea62
+_eclasses_=edos2unix	33e347e171066657f91f8b0c72ec8773	strip-linguas	ac3ee41ee2d31d8c41a77c0838320cc7	wrapper	4a1902f969e5718126434fc35f3a0d9c	eutils	dab5d8ec471d025b79c9e6906bcf3bff	mono-env	60554e038c8ac2b080e23e280ad8382b	dotnet-native	1ef59d4bd0c2968f1b935c22608afc75	dotnet	4dd123fdd3d16de32fe13e1a8f8fdf4d	mono-pkg-config	323b31014527a44410ccf6958a8afb08
+_md5_=78f3e4f2d72052abe817f9cd740f8863
