--- a/metadata/md5-cache/app-editors/mypad-1.0.5
+++ b/metadata/md5-cache/app-editors/mypad-1.0.5
@@ -11,5 +11,5 @@ RDEPEND=>=dev-dotnet/icsharpcode-texteditor-3.2.2_p2018020702-r1 >=dev-dotnet/nd
 RESTRICT=mirror
 SLOT=3
 SRC_URI=https://github.com/ArsenShnurkov/mypad-winforms-texteditor/archive/090ddcfac6cd51007e2d90e19a010074de1f353e.zip -> app-editors-mypad-1.0.5.zip
-_eclasses_=edos2unix	33e347e171066657f91f8b0c72ec8773	strip-linguas	ac3ee41ee2d31d8c41a77c0838320cc7	wrapper	4a1902f969e5718126434fc35f3a0d9c	eutils	dab5d8ec471d025b79c9e6906bcf3bff	mono-env	60554e038c8ac2b080e23e280ad8382b	dotnet-native	1ef59d4bd0c2968f1b935c22608afc75	dotnet	4dd123fdd3d16de32fe13e1a8f8fdf4d	desktop	c0d27bf73aa08ca05b663dbd31fbef28	xdg-utils	fffb53a53cf17c9c0c998a3c0a590c7e
+_eclasses_=mono-env	60554e038c8ac2b080e23e280ad8382b	dotnet-native	69e00aef21b76b9424acb08943a24848	dotnet	2e257b2e1bc445bf3f8907ff96c9f02b	desktop	c0d27bf73aa08ca05b663dbd31fbef28	xdg-utils	fffb53a53cf17c9c0c998a3c0a590c7e
 _md5_=87cc352af9f97bd9fe1b56202a3f20cb
